# cp_flink_ecommerce_usecase

./: .env  .gitignore  Dockerfile  README.md  artifact_generator.sh  csv_reader_flink_job.py  flink_job.py  flinkapplication.json  jar_test.py  jdbc_flink_job.py  main.py  orders_producer_zip.py  postgres_cdc_flink_job.py  products_producer.py  pyproject.toml  unzip_CSV_file.py
maven/: pom.xml
